--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,59 @@ body{
     flex-direction: column;
     margin-top: 10px;
 }
+
+.cardBody > button{
+    margin-top: 10px;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    background: #ccc;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.ticketform{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    border: solid 1px #ccc;
+    border-radius: 5px;
+    width: 300px;
+    height: 400px;
+}
+
+.ticketform > label{
+    margin-top: 10px;
+}
+
+.ticketform > input[type="submit"]{
+    margin-top: 10px;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    background: #ccc;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.newinput{
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-bottom: solid 1px #ccc;
+    outline: none;
+    font-size: 20px;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
