--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body{
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin: 10px 0;
 }
 
